[Socket Server] with packet class

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 SocketGameServer/SocketGameServer/obj/
 SocketGameServer/SocketGameServer/bin/
+SocketGameServer/Server/bin/
+SocketGameServer/Server/obj/
